fixed menu display on small screen + btn layout

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,12 @@ body {
     font-family: 'Arsenal', sans-serif;
 }
 
+nav.navbar {
+    display: flex;
+    padding: 10px 16px;
+    text-decoration: none;
+}
+
 img.icon {
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -22,16 +28,27 @@ img.main-image {
 
 .btn {
     transition-duration: 0.4s;
+    padding: 20px 35px;
+    border: none;
 }
 
 .btn:hover {
     background-color: rgb(61, 72, 73);
-    /* Green */
     color: white;
 }
 
 h1.page-heading {
     font-size: 2vw;
     color: rgb(61, 72, 73);
+    font-weight: bold;
 }
 
+footer.footer {
+    font-size: 15px;
+    text-align: center;
+    background-color: rgba(58, 53, 53, 0.493);
+    color: rgba(110, 110, 110, 0.658);
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+}
